--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 26
     defaultConfig {
@@ -38,19 +40,23 @@ dependencies {
     implementation 'android.arch.lifecycle:extensions:1.1.0'
 
     implementation 'pl.hypeapp:materialtimelineview:1.0'
+    implementation 'com.github.vipulasri:timelineview:1.0.6'
 
     implementation 'com.google.firebase:firebase-core:11.8.0'
     implementation 'com.google.firebase:firebase-database:11.8.0'
     implementation 'com.google.firebase:firebase-messaging:11.8.0'
     implementation 'com.firebaseui:firebase-ui-database:3.1.0'
 
+    implementation 'jp.wasabeef:glide-transformations:3.0.1'
+    implementation 'com.github.bumptech.glide:glide:4.1.1'
+    kapt 'com.github.bumptech.glide:compiler:4.1.1'
+
     testImplementation 'junit:junit:4.12'
 
-    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    annotationProcessor 'android.arch.lifecycle:compiler:1.1.0'
+
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
-
-
 
 apply plugin: 'com.google.gms.google-services'
